# DeepLearningForFun

./: .gitmodules  LICENSE  README.md
MXNet-Cpp/parsingNDArray/: CMakeLists.txt  README.md  build_run.sh  read_mx_nd.cpp
MXNet-Cpp/parsingNDArray/include/: mx_nd_utils.hpp
MXNet-Cpp/parsingNDArray/testData/: test-0000.params  test-symbol.json  test.py
MXNet-Python/CalculateFlopsTool/: README.md  calculateFlops.py
MXNet-Python/CalculateFlopsTool/symbols/: fcn8s-symbol.json  resnet-50-symbol.json  resnext-101-64x4d-symbol.json
Mxnet-Scala/CenterLoss/: README.md  build.sbt
Mxnet-Scala/CenterLoss/scripts/: run_center_loss.sh
Mxnet-Scala/CycleGAN/: README.md  build.sbt
Mxnet-Scala/CycleGAN/project/: plugins.sbt
Mxnet-Scala/DRLFlappyBird/: README.md  build.sbt
Mxnet-Scala/FastNeuralStyle/: README.md  build.sbt
Mxnet-Scala/Gan/: README.md  build.sbt
Mxnet-Scala/HumanActivityRecognition/: README.md  build.sbt
Mxnet-Scala/MatrixFactorization/: README.md  matrixFac.scala
Mxnet-Scala/Pix2Pix/: README.md  build.sbt
Mxnet-Scala/SelfNormNets/: README.md  build.sbt
Mxnet-Scala/TrainQuantization/: README.md  build.sbt
Mxnet-Scala/UsefulTools/: README.md  build.sbt
Oneflow-Python/CycleGAN/: README.md  image_pool.py  networks.py  test.sh  test_of_cyclegan.py  train.sh  train_of_cyclegan.py
Oneflow-Python/DRL-FlappyBird/: BrainDQNOneFlow.py  FlappyBirdDQN.py  README.md  run_flappy_bird.sh
Oneflow-Python/FastNeuralStyle/: README.md  infer.sh  infer_of_neural_style.py  requirements.txt  style_model.py  train.sh  train_of_neural_style.py  vgg16_model.py
(+156 files in other folders)
